feat: 集成、样式修改及翻译

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,10 @@
   <link rel="icon" type="image/x-icon" href="thingsboard.ico">
   <link rel="preload" href="assets/fonts/MaterialIcons-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous" />
   <link rel="preload" href="assets/fonts/MaterialIconsRound-Regular.otf" as="font" type="font/otf" crossorigin="anonymous" />
+  <link rel="preload" href="assets/fonts/Alibaba-PuHuiTi-Medium.otf" as="font" type="font/otf" crossorigin="anonymous" />
+  <link rel="preload" href="assets/fonts/Alibaba-PuHuiTi-Regular.otf" as="font" type="font/otf" crossorigin="anonymous" />
+  <link rel="preload" href="assets/fonts/SourceHanSansOLD-Medium-2.otf" as="font" type="font/otf" crossorigin="anonymous" />
+  <link rel="preload" href="assets/fonts/SourceHanSansSC-Regular-2.otf" as="font" type="font/otf" crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/fonts/material-icons.css" />
   <style type="text/css">
 
