--- a/src/index.html
+++ b/src/index.html
@@ -15,28 +15,30 @@
     limitations under the License.
 
 -->
-<!doctype html>
-<html lang="en" style="width: 100%; height: 100%;">
-<head>
-  <meta charset="utf-8">
-  <title>ThingsBoard</title>
-  <base href="/">
+<!DOCTYPE html>
+<html lang="en" style="width: 100%; height: 100%">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="thingsboard.ico">
-  <link rel="preload" href="assets/fonts/MaterialIcons-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous" />
-  <link rel="preload" href="assets/fonts/MaterialIconsRound-Regular.otf" as="font" type="font/otf" crossorigin="anonymous" />
-  <link rel="preload" href="assets/fonts/Alibaba-PuHuiTi-Medium.otf" as="font" type="font/otf" crossorigin="anonymous" />
-  <link rel="preload" href="assets/fonts/Alibaba-PuHuiTi-Regular.otf" as="font" type="font/otf" crossorigin="anonymous" />
-  <link rel="preload" href="assets/fonts/SourceHanSansOLD-Medium-2.otf" as="font" type="font/otf" crossorigin="anonymous" />
-  <link rel="preload" href="assets/fonts/SourceHanSansSC-Regular-2.otf" as="font" type="font/otf" crossorigin="anonymous" />
+<head>
+  <meta charset="utf-8" />
+  <title>ThingsBoard</title>
+  <base href="/" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="thingsboard.ico" />
+  <link rel="prefetch" href="assets/fonts/MaterialIcons-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous" />
+  <link rel="prefetch" href="assets/fonts/MaterialIconsRound-Regular.otf" as="font" type="font/otf" crossorigin="anonymous" />
+  <link rel="prefetch" href="assets/fonts/Alibaba-PuHuiTi-Medium.otf" as="font" type="font/otf" crossorigin="anonymous" />
+  <link rel="prefetch" href="assets/fonts/Alibaba-PuHuiTi-Regular.otf" as="font" type="font/otf" crossorigin="anonymous" />
+  <!-- <link rel="preload" href="assets/fonts/SourceHanSansOLD-Medium-2.otf" as="font" type="font/otf" crossorigin="anonymous" />
+  <link rel="preload" href="assets/fonts/SourceHanSansSC-Regular-2.otf" as="font" type="font/otf" crossorigin="anonymous" /> -->
+  <link rel="prefetch" href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:400,500" crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/fonts/material-icons.css" />
   <style type="text/css">
-
-    body, html {
+    body,
+    html {
       height: 100%;
       overflow: hidden;
-      background-color: #eee;
+      background-color: #f7f8fa;
     }
 
     .tb-loading-spinner {
@@ -52,11 +54,11 @@
       text-align: center;
     }
 
-    .tb-loading-spinner > div {
+    .tb-loading-spinner>div {
       width: 30px;
       height: 30px;
       margin-right: 10px;
-      background-color: rgb(43,160,199);
+      background-color: rgb(43, 160, 199);
 
       border-radius: 100%;
       display: inline-block;
@@ -78,29 +80,50 @@
     }
 
     @-webkit-keyframes tb-bouncedelay {
-      0%, 80%, 100% { -webkit-transform: scale(0) }
-      40% { -webkit-transform: scale(1.0) }
+
+      0%,
+      80%,
+      100% {
+        -webkit-transform: scale(0);
+      }
+
+      40% {
+        -webkit-transform: scale(1);
+      }
     }
 
     @-moz-keyframes tb-bouncedelay {
-      0%, 80%, 100% { -moz-transform: scale(0) }
-      40% { -moz-transform: scale(1.0) }
+
+      0%,
+      80%,
+      100% {
+        -moz-transform: scale(0);
+      }
+
+      40% {
+        -moz-transform: scale(1);
+      }
     }
 
     @keyframes tb-bouncedelay {
-      0%, 80%, 100% {
+
+      0%,
+      80%,
+      100% {
         -webkit-transform: scale(0);
         -moz-transform: scale(0);
         transform: scale(0);
-      } 40% {
-          -webkit-transform: scale(1.0);
-          -moz-transform: scale(1.0);
-          transform: scale(1.0);
-        }
-    }
+      }
 
+      40% {
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        transform: scale(1);
+      }
+    }
   </style>
 </head>
+
 <body class="tb-default">
   <tb-root></tb-root>
   <div id="tb-loading-spinner" class="tb-loading-spinner">
@@ -109,4 +132,5 @@
     <div class="tb-bounce3"></div>
   </div>
 </body>
+
 </html>
